--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                
                 <div class="row">
                     <div class="col">
-                        <a class="btn btn-sm" href="https://www.facebook.com/amapolabeautysalon">
+                        <a class="btn btn-sm" href="https://www.facebook.com/WantanHousePE">
                             <img src="logo_fb.png" height="20">
                         </a><br><br>
-                        <a class="btn btn-sm" href="https://www.instagram.com/amapolabeautysalon_/">
+                        <a class="btn btn-sm" href="https://www.instagram.com/wantanhouse/">
                             <img src="logo_ig.png" height="25">
                         </a>
                        
